# data-generators-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
configs/: global_settings.yml
docs/: architecture.md  scenarios.md
projects/attendance_spark_pipeline/: README.md
projects/attendance_spark_pipeline/configs/: attendance_scenario_local.yml
projects/attendance_spark_pipeline/scripts/: run_generate_attendance.ps1
projects/ecommerce_analytics_demo/: README.md
src/data_generators/: __init__.py  cli.py
src/data_generators/core/: __init__.py  base_generator.py  faker_utils.py  utils.py
src/data_generators/domains/: __init__.py
src/data_generators/domains/analytics/: __init__.py  ecommerce.py  sales.py
src/data_generators/domains/engineering/: __init__.py  iot_sensors.py
src/data_generators/domains/science/: __init__.py  experiments.py
src/data_generators/scenarios/: __init__.py
src/data_generators/scenarios/attendance/: __init__.py  generator.py  schema.yml
src/data_generators/scenarios/bank_transactions/: generator.py  schema.yml
src/data_generators/scenarios/credit_card_spend/: __init__.py  generator.py  schema.yml
src/data_generators/scenarios/customer_360/: __init__.py  generator.py  schema.yml
src/data_generators/scenarios/etl_billing/: __init__.py  (+2 more)
src/data_generators_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/notebooks/: scenario_notebook_template.md
templates/scenarios/: scenario_template.yml
tests/: test_domains.py  test_scenarios_attendance.py  test_scenarios_spark_logs.py
(+9 files in other folders)
