[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-generators-lab"
version = "0.1.0"
description = "Synthetic data generators for data engineering, science, and analytics."
authors = [
  { name = "Aadarsh Shrestha" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "pandas>=2.0",
  "faker>=24.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
